--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                             <div class="transition-transform 
                                 active:scale-85 
                                 cursor-pointer">
-                                <span>$&nbsp;--</span>
+                                <span id="totalR">$&nbsp;--</span>
                                 <div
                                     class="relative 
                                         max-w-fit 
@@ -677,7 +677,8 @@
                                     <span class="flex-1 
                                         text-inherit 
                                         font-normal 
-                                        px-1"><svg
+                                        px-1"
+                                        id="copyTotal"><svg
                                             xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                             stroke-linecap="round" stroke-linejoin="round"
