Se agregó API y nuevas funciones, se corrigieron bugs y la UI

--- a/index.html
+++ b/index.html
@@ -619,11 +619,29 @@
                                             xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                             stroke-linecap="round" stroke-linejoin="round"
-                                            class="lucide lucide-ellipsis-vertical">
+                                            class="lucide lucide-ellipsis-vertical"
+                                            id="menuTrigger">
                                             <circle cx="12" cy="12" r="1"></circle>
                                             <circle cx="12" cy="5" r="1"></circle>
                                             <circle cx="12" cy="19" r="1"></circle>
-                                        </svg></span>
+                                        </svg>
+                                    </span>
+                                    <div id="listbox" class="w-full 
+                                        relative 
+                                        flex 
+                                        flex-col 
+                                        gap-1 
+                                        p-1 
+                                        overflow-hidden
+                                        hidden">
+                                        <ul class="w-full 
+                                            flex 
+                                            flex-col 
+                                            gap-0.5 
+                                            outline-none">
+                                            <!-- Provincias -->
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                             <span id="iibbT">$&nbsp;--</span>
@@ -857,7 +875,7 @@
         <div class="footer
             px-5
             py-3">
-            <span class="infoDolar">Dólar oficial AR$ <span id="dollarRate">1230</span> by Dolarito.ar - 30 de
+            <span class="infoDolar">Dólar oficial AR$ <span id="dollarRate">1205</span> by Dolarito.ar - 30 de
                 diciembre del 2024.</span>
         </div>
         <div class="containerAddToCartBtn">
